Code improvements: Reduced API surface of "BootProperties". Switched to using constructor object to create objects from class names.